More concurrency fixes + updated Swagger docs
